clear highlighting for document when moving interface content is about to invalidate

I'll also commit a change to Kate to emit this signal on setText calls,
making 'reformat source' as fast as possible

BUG: 215200