language/highlighting/codehighlighting.h
@@ -203,6 +203,8 @@ class KDEVPLATFORMLANGUAGE_EXPORT CodeHighlighting : public QObject, public KDev
 
     /// when the colors change we must invalidate our local caches
     void adaptToColorChanges();
+
+    void aboutToInvalidateMovingInterfaceContent(KTextEditor::Document*);
 };
 
 }
